
Added
- Support for Variable Nodes
- Graph Difference Algorithm
- New SimpleN3RulesReasoner which can process simple N3 rules of the form { } => { }
- More Extension Methods
 - LoadFromFile and LoadFromUri for Graphs and Triple Stores
 - ToLiteral for byte and sbyte
 - ToLiteralDate and ToLiteralTime for DateTime
- New HTTP Handlers for ASP.Net
 - DatasetHandler for serving RDF datasets
- Additional Configuration API for new features
 - dnr:SparqlDataset and dnr:usingDataset properties
- Query
 - GROUP BY is now supported in subqueries
 - Scalar Arguments for aggregates added when in 1.1 Extended mode (only GROUP_CONCAT allows scalar arguments in 1.1 mode)
 - Added new SPARQL 1.1 functions
  - String Functions - CONACT, CONTAINS, ENCODE_FOR_URI, LCASE, STRENDS, STRLEN, STRSTARTS, SUBSTR, UCASE
  - Date Time Functions - DAY, HOURS, MINUTES, MONTH, NOW, SECONDS, TIMEZONE, TZ and YEAR
  - Numeric Functions - ABS, CEIL, FLOOR, ROUND and ISNUMERIC
  - Hash Functions - MD5, SHA1, SHA256, SHA384, SHA512
- Update
 - Added support for HTTP PATCH operation to SPARQL Uniform HTTP Protocol implementations
- Storage
 - Expanded the IGenericIOManager interface to include methods for deletings graphs and listing graphs
 - Connector for Fuseki
 - Connector which wraps an in-memory store (i.e. a IInMemoryQueryableStore) or a SPARQL dataset (i.e. a ISparqlDataset)
 - Connector which wraps any IGenericIOManager and makes it read-only
- New HtmlSchemaWriter outputs HTML versions of ontologies in a schema specification style rather than as a table like the existing HtmlWriter

Changed
- Bug Fixes
 - Notation 3 Parser allows variable quantification directives in Graph Literals
 - Queries with a LIMIT modifier containing FILTERs were optimised for lazy evaluation but would return incorrect results
   in some cases
 - Queries with a DISTINCT modifer and a LIMIT were optimised for lazy evaluation when they shouldn't have been