@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{BD80F826-56A3-4A88-B466-DDFA0691FFB8}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -145,6 +145,7 @@
     <Compile Include="Sparql\ViewTests.cs" />
     <Compile Include="VariableNodeTests.cs" />
     <Compile Include="Web\ETagTests.cs" />
+    <Compile Include="Web\ServiceDescription.cs" />
     <Compile Include="Writing\OwlOneOf.cs" />
     <Compile Include="Writing\SchemaWriter.cs" />
     <Content Include="resources\bad_profile.xhtml">
